[build-system]
requires = ["cmake>=3.23", "scikit-build-core>=0.3.3", "pybind11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "pygctffind"
version = "0.0.1"
description="Python bindings for GCTFFind"
readme = "README.md"
authors = [
    { name = "Shawn Zheng", email = "shawn.zheng@czii.org" },
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.scikit-build]
cmake.verbose = true
logging.level = "DEBUG"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
    "B",           # flake8-bugbear
    "I",           # isort
    "ARG",         # flake8-unused-arguments
    "C4",          # flake8-comprehensions
    "EM",          # flake8-errmsg
    "ICN",         # flake8-import-conventions
    "G",           # flake8-logging-format
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "PTH",         # flake8-use-pathlib
    "RET",         # flake8-return
    "RUF",         # Ruff-specific
    "SIM",         # flake8-simplify
    "T20",         # flake8-print
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
    "EXE",         # flake8-executable
    "NPY",         # NumPy specific rules
    "PD",          # pandas-vet
]

ignore = [
    "PLR09",    # Too many X
    "PLR2004",  # Magic comparison
]

